kubernets/driver-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: driver-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: driver-service
  template:
    metadata:
      labels:
        app: driver-service
    spec:
      containers:
        - name: driver-service
          image: shashi9133/driver-service:latest
          ports:
            - containerPort: 8082

---
apiVersion: v1
kind: Service
metadata:
  name: driver-service
spec:
  type: NodePort
  selector:
    app: driver-service
  ports:
    - port: 8082
      targetPort: 8082
      nodePort: 30002
