kubernets/trip-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trip-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trip-service
  template:
    metadata:
      labels:
        app: trip-service
    spec:
      containers:
        - name: trip-service
          image: shashi9133/trip-service:latest
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: trip-service
spec:
  type: NodePort
  selector:
    app: trip-service
  ports:
    - port: 8083
      targetPort: 8083
      nodePort: 30003
