kubernets/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uber-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8081

          - path: /api/drivers
            pathType: Prefix
            backend:
              service:
                name: driver-service
                port:
                  number: 8082

          - path: /api/trips
            pathType: Prefix
            backend:
              service:
                name: trip-service
                port:
                  number: 8083
